--- a/SM3/SM3/SM3.csproj
+++ b/SM3/SM3/SM3.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Models\users.cs">
       <DependentUpon>OkosModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Presenters\FelhasznalokListaPresenter.cs" />
     <Compile Include="Presenters\LoginPresenter.cs" />
     <Compile Include="Presenters\SzobakListaPresenter.cs" />
     <Compile Include="Program.cs" />
@@ -122,19 +123,26 @@
     <Compile Include="Repositories\FelhasznaloRepositories.cs" />
     <Compile Include="Services\CurrentUser.cs" />
     <Compile Include="Services\Hash.cs" />
+    <Compile Include="ViewInterfaces\IFelhasznalokView.cs" />
     <Compile Include="ViewInterfaces\ILoginView.cs" />
     <Compile Include="ViewInterfaces\ISzobakListView.cs" />
-    <Compile Include="Views\LoginForm.cs">
+    <Compile Include="Views\FelhasznalokForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\LoginForm.Designer.cs">
-      <DependentUpon>LoginForm.cs</DependentUpon>
+    <Compile Include="Views\FelhasznalokForm.Designer.cs">
+      <DependentUpon>FelhasznalokForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Views\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\LoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -145,11 +153,14 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Views\LoginForm.resx">
-      <DependentUpon>LoginForm.cs</DependentUpon>
+    <EmbeddedResource Include="Views\FelhasznalokForm.resx">
+      <DependentUpon>FelhasznalokForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\LoginForm.resx">
+      <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
     <EntityDeploy Include="Models\OkosModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
